--- a/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
@@ -124,6 +124,12 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Collections\IGeneralList.cs">
       <Link>Collections\IGeneralList.cs</Link>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Collections\ObjectModel\TMReadOnlyCollection.cs">
+      <Link>Collections\ObjectModel\TMReadOnlyCollection.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Collections\ObjectModel\TMReadOnlyList.cs">
+      <Link>Collections\ObjectModel\TMReadOnlyList.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\componentmodel\INotificationObject.cs">
       <Link>ComponentModel\INotificationObject.cs</Link>
     </Compile>
@@ -611,13 +617,6 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\EnumHelper.TryParse.cs">
       <Link>Helpers\EnumHelper.TryParse.cs</Link>
       <DependentUpon>EnumHelper.cs</DependentUpon>
-    </Compile>
-    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ExecutionHelper.cs">
-      <Link>Helpers\ExecutionHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ExecutionHelper.MakeAsync.cs">
-      <Link>Helpers\ExecutionHelper.MakeAsync.cs</Link>
-      <DependentUpon>ExecutionHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.CopyTo.cs">
       <Link>Helpers\IOHelper.CopyTo.cs</Link>
@@ -2300,13 +2299,6 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Data.ToEnumerable.SqlClient.cs">
       <Link>Extensions\Data.ToEnumerable.SqlClient.cs</Link>
       <DependentUpon>Data.cs</DependentUpon>
-    </Compile>
-    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Execution.cs">
-      <Link>Extensions\Execution.cs</Link>
-    </Compile>
-    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Execution.MakeAsync.cs">
-      <Link>Extensions\Execution.MakeAsync.cs</Link>
-      <DependentUpon>Execution.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.CreateDirectoryDeep.cs">
       <Link>Extensions\IO.CreateDirectoryDeep.cs</Link>
