--- a/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
@@ -477,6 +477,10 @@
       <Link>Helpers\CollectionHelper.Select.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.SelectMany.cs">
+      <Link>Helpers\CollectionHelper.SelectMany.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.SequenceEqual.cs">
       <Link>Helpers\CollectionHelper.SequenceEqual.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
