notification, workflows, improvements and cleanups
- CHG: moved workflow implementations to separate namespace
- CHG: code cleanups and improvements
- CHG: definition of contract name for workflow attributes
- UPD: ProgressValue uses new framework parts of NotificationObjectBase
now

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,4 @@ Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAucti
 Projects/MarcelJoachimKloubert.Sandbox/MarcelJoachimKloubert.Sandbox.v12.suo
 /Projects/MarcelJoachimKloubert.Sandbox/MarcelJoachimKloubert.Sandbox/obj
 /Projects/MarcelJoachimKloubert.Sandbox/MarcelJoachimKloubert.Sandbox/bin
+MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj.user
