--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -149,9 +149,9 @@
     <Compile Include="Execution\Functions\IFunctionLocator.cs" />
     <Compile Include="Execution\SimpleAsyncExecutionResult.cs" />
     <Compile Include="Execution\IAsyncExecutionResult.cs" />
-    <Compile Include="Execution\Workflows\AggregateWorkflow.cs" />
-    <Compile Include="Execution\Workflows\AttributeWorkflow.cs" />
-    <Compile Include="Execution\Workflows\DelegateWorkflow.cs" />
+    <Compile Include="Execution\Workflows\Impl\AggregateWorkflow.cs" />
+    <Compile Include="Execution\Workflows\Impl\AttributeWorkflow.cs" />
+    <Compile Include="Execution\Workflows\Impl\DelegateWorkflow.cs" />
     <Compile Include="Execution\Workflows\IWorkflow.cs" />
     <Compile Include="Execution\Workflows\IWorkflowExecutionContext.cs" />
     <Compile Include="Execution\Workflows\NextWorkflowStepAttribute.cs" />
