config and cleanups
- ADD: JsonFileConfigRepository
- FIX: saving INI file
- CHG: code cleanups

--- a/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
@@ -151,6 +151,9 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Configuration\Impl\IniFileConfigRepository.cs">
       <Link>Configuration\Impl\IniFileConfigRepository.cs</Link>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Configuration\Impl\JsonFileConfigRepository.cs">
+      <Link>Configuration\Impl\JsonFileConfigRepository.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\configuration\impl\KeyValuePairConfigRepository.cs">
       <Link>Configuration\Impl\KeyValuePairConfigRepository.cs</Link>
     </Compile>
