collections, cleanups and cleanups
- ADD: DispatcherObservableCollection that uses a Dispatcher for each
operation
- ADD: AddRange() method to SynchronizedObservableCollection<T>
- FIX: AddRange() helper / extension method
- CHG: code cleanups and improvements

--- a/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviours\WebBrowser.cs" />
+    <Compile Include="Collections\ObjectModel\DispatcherObservableCollection.cs" />
     <Compile Include="Collections\ObjectModel\SynchronizedObservableCollection.cs" />
     <Compile Include="Controls\BorderlessMoveableWindow.cs" />
     <Compile Include="Controls\SVGImage.xaml.cs">
